@@ -8,7 +8,6 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
            Pino Toscano <pino@debian.org>
 Build-Depends: debhelper (>= 8.9.13),
                dpkg-dev (>= 1.16.1),
-               elfutils,
                firebird-dev [amd64 armel i386 ia64 kfreebsd-amd64 kfreebsd-i386 mips mipsel powerpc s390 sh4 sparc],
                flex,
                freetds-dev,
