@@ -1,6 +1,8 @@
 qt4-x11 (4:4.8.0-2) UNRELEASED; urgency=low
 
-  * 
+  * Revert debian/compat to 8:
+    - drop mv-qt4-bin-dbg.sh script.
+    - drop elfutils build dependency.
 
  -- Fathi Boudra <fabo@debian.org>  Wed, 04 Jan 2012 22:15:56 +0200
 
